# rag-backend

./: .env.example  .gitattributes  README.md  pyproject.toml
docker/: Dockerfile
src/: config.py  database.py  exceptions.py  main.py
src/api/v1/: analytics.py  blacklist.py  chunking.py  chunks.py  configurations.py  datasets.py  documents.py  embeddings.py  experiments.py  ground_truth.py  hierarchical_metadata.py  knowledge_base.py  metrics.py  preprocessing.py  queries.py  query_enhancement.py  (+4 more)
src/models/: __init__.py  blacklist.py  chunk.py  chunking.py  configuration.py  dataset.py  document.py  embedding.py  enums.py  experiment.py  ground_truth.py  hierarchical_metadata.py  ingestion_configuration.py  knowledge_base.py  metrics.py  preprocessing.py  query.py  query_enhancement.py  ranking.py  reranking.py  research_strategy.py  retrieval_configuration.py  vector_db.py
src/schemas/: blacklist.py  chunk.py  chunking.py  configuration.py  dataset.py  dataset_queries.py  document.py  embedding.py  experiment.py  experiment_document.py  ground_truth.py  hierarchical_metadata.py  knowledge_base.py  metrics.py  preprocessing.py  query.py  query_enhancement.py  ranking.py  reranking.py  research_strategy.py  vector_db.py
src/services/: dataset_service.py  document_service.py  experiment_service.py  knowledgebase_service.py  metrics_service.py  ranking_service.py  vector_db_service.py
src/utils/: error_handler.py  logger.py  pagination.py  validators.py
tests/: conftest.py  test_datasets.py  test_documents.py  test_experiments.py  test_vector_db.py
